--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -130,6 +130,7 @@
 
                 </div>
 
+                <div id="popupBackdrop" class="popupBackdrop"></div>
                 <div id="popup" class="popup">
                     <div class="popup-content">
                         <h1 style="font-weight: bold;">Review [book_title]</h1>
@@ -173,26 +174,6 @@
 
         <!-- Script for checking user login and logout functionality-->
         <script type="module" src="../js/session.js"></script>
-
-        <!-- Script for review popup -->
-        <script>
-            document.addEventListener("DOMContentLoaded", () => {
-                const popup = document.getElementById("popup");
-                const openPopup = document.getElementById("openPopup");
-                const closeBtn = document.querySelector(".close");
-
-                // Make sure it's closed initially
-                popup.style.display = "none";
-
-                openPopup.addEventListener("click", () => {
-                    popup.style.display = "grid";
-                });
-
-                closeBtn.addEventListener("click", () => {
-                    popup.style.display = "none";
-                });
-            });
-        </script>
 
         <script>
             document.addEventListener("DOMContentLoaded", async () => {
@@ -265,14 +246,15 @@
 
                 // event delegation
                 document.addEventListener("click", e => {
-                    if (e.target.closest(".openPopup")) popup.style.display = "grid";
-                    if (e.target.closest(".close")) popup.style.display = "none";
+                    if (e.target.closest(".openPopup")) {
+                        popup.style.display = "grid";
+                        popupBackdrop.style.display = "block";
+                    }
+                    if (e.target.closest(".close") || e.target == popupBackdrop) {
+                        popup.style.display = "none";
+                        popupBackdrop.style.display = "none";
+                    }
                 });
-
-                // Popup event handling
-                //const popup = document.getElementById("popup");
-                //const closeBtn = document.querySelector(".close");
-                //popup.style.display = "none";
 
                 const back = document.getElementById("backPage");
                 back.addEventListener("click", (event) => {
