--- a/frontend/loginPages/login.html
+++ b/frontend/loginPages/login.html
@@ -143,7 +143,7 @@
                 const { data, error } = await supabase.auth.signInWithPassword({ email, password });
 
                 if (error) {
-                    message.textContent = 'Error: ${error.message}';
+                    message.textContent = `Error: ${error.message}`;
                     message.style.color = "red";
                 } else {
                     message.textContent = "Logged in successfully";
